# framework-application-template

./: CMakeLists.txt
include/: Application.hpp
source/: Application.cpp
